# real-world-axum-api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20250916223011_create_users_table.sql  20251006022126_create_users_table.sql  20251006022223_create_email_verification_token.sql  20251006022303_add_email_verified_to_user.sql  20251006161306_create_password_reset_tokens.sql  20251007080318_create_users_table.sql  20251007080429_create_email_verification.sql  20251007080546_add_email_verified_to_user.sql  20251007080628_create_password_reset_tokens.sql  20251015195318_create_refresh_tokens.sql  20251015201722_change_updated_at_to_last_used.sql  20251015201921_change_updated_at_to_last_used_at.sql  20251022085654_add_token_rotation_fields.sql
src/: lib.rs  main.rs  state.rs
src/auth/: jwt.rs  password.rs
src/handlers/: auth.rs  health.rs
src/models/: refresh_token.rs
src/repositories/: mod.rs  refresh_token_repository.rs  traits.rs  user_repository.rs
src/schemas/: auth_schemas.rs  mod.rs
src/services/: email_services.rs  mod.rs
